--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@types/node": "^14.0.14",
+    "@types/react": "^16.9.41",
     "firebase-functions-test": "^0.1.6",
-    "firebase-tools": "^8.0.1"
+    "firebase-tools": "^8.0.1",
+    "typescript": "^3.9.5"
   }
 }
